<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hacker Tracker</string>

    <!-- General -->
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="tba">TBA</string>


    <!-- Errors -->
    <string name="empty_text">No further information available.\nYou\'ll have to look somewhere else.</string>
    <string name="empty_feed">Couldn\'t find anything.</string>
    <string name="no_results_for">No results for \"%1$s\"</string>
    <string name="no_results_message">Try expanding your search terms.</string>
    <string name="nothing_to_show">Sorry, nothing to show</string>
    <string name="nothing_here">Nothing here</string>
    <string name="error_title">404</string>
    <string name="empty_location">unknown location</string>
    <string name="error_unable_to_sync">Unable to sync</string>
    <string name="no_maps">404</string>
    <string name="no_maps_to_show">Maps Not Found</string>
    <string name="events_not_found">Events Not Found</string>

    <!-- Main Nav -->
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="information">Information</string>
    <string name="map">Maps</string>
    <string name="partners_vendors">Partners &amp; Vendors</string>
    <string name="contests">Contests</string>
    <string name="workshops">Workshops</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Notifications -->
    <string name="notification_text_blank">Starting soon.</string>
    <string name="notification_text">Starting soon in %1$s.</string>
    <string name="notification_updated">Details have been updated.</string>


    <!-- Event -->
    <string name="demo">DEMO</string>
    <string name="tool">TOOL</string>
    <string name="exploit">EXPLOIT</string>
    <string name="timestamp_start">%1$s, %2$s</string>
    <string name="timestamp_full">%1$s, %2$s - %3$s</string>


    <!-- Time -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="msg_in_hours">in %1$d hr</string>
    <string name="msg_in_mins">in %1$d min</string>


    <!-- Urls -->
    <string name="open_link">Open Link</string>
    <string name="link_warning">External Link</string>
    <string name="link_message">Warning: external links can be dangerous. Are you sure you wish to open the following link?\n\n%1$s</string>


    <!-- Events -->
    <string name="events">Events</string>


    <!-- Speakers -->
    <string name="speakers">Speakers</string>
    <string name="related_events">Related Events</string>
    <string name="speaker_default_title">Hacker</string>


    <!-- Filters -->
    <string name="alert_filter_title">Filter</string>
    <string name="types">Types</string>


    <!-- Home -->
    <string name="updates">Recent Updates</string>


    <!-- WiFi Helper -->
    <string name="wifi_title">WiFi</string>
    <string name="wifi_content">Quickly connect to DEF CON\'s WiFi using Hacker Tracker.\n\nIf you run into any issues, you can try doing it yourself: wifireg.defcon.org/android.php</string>
    <string name="wifi_content_legacy">Your Android version is too low to setup. You can try doing it yourself: wifireg.defcon.org/android.php</string>
    <string name="wifi_action">Save network</string>

    <string name="website">Website</string>


    <!-- Settings -->
    <string name="version">Version %1$s</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="setting_change_theme">Change Theme</string>
    <string name="setting_change_conference">Change Conference</string>
    <string name="setting_back_button_drawer">Back button to open the drawer</string>
    <string name="setting_easter_eggs_summary">\???</string>
    <string name="setting_easter_eggs">Easter Eggs</string>
    <string name="setting_user_analytics">Send anonymous usage statistics</string>
    <string name="choose_conference">Choose conference</string>
    <string name="setting_time_zone">Events in (%1$s)</string>
    <string name="setting_time_zone_summary_on">Using conference\'s timezone</string>
    <string name="setting_time_zone_summary_off">Using device\'s timezone</string>
    <string name="settings_reboot">Reboot</string>
    <string name="settings_safe_mode_summary">Enter Safe Mode</string>


    <!-- DEF CON Support Hotline -->

    <string name="help_line_title">The DEF CON Support Hotline</string>
    <string name="help_line_content">You can reach DEF CON staff during normal hours of operation to anonymously report any behaviour violating our code of conduct or to find an empathic ear by calling the Hotline. Trained community volunteers will be standing by to help any attendees.\n\nYou can still report issues by going to any Info Booth or talking to any SOC Goon, but sometimes you may not want to be walking around in person with a problem, and so we have added a phone option. When you call the Hotline you will reach DEF CON community Goons trained to help in these areas.</string>
    <string name="help_line_action">Call +1 (725) 222–0934</string>


    <string name="help_line_message">Note: The hotline is not for general DEF CON questions, if you have those, please see the nearest Info Booth. \n\nWould you still like to call?</string>
    <string name="call">Call</string>

    <!-- Code of Conduct-->
    <string name="code_of_conduct">Code of Conduct</string>


    <string name="villages">Villages</string>
    <string name="bookmark">Bookmark</string>
    <string name="twitter">Twitter</string>
    <string name="category">Category</string>
    <string name="faq">FAQ</string>
    <string name="setting_filter_button_shown">Show filter button</string>

    <string name="locations_schedule">Locations</string>
    <string name="support_doc">Help &amp; Support</string>

</resources>
