<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:title="hello world"
            app:subtitle="12:00 AM | Lounge"
            app:subtitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


                <TextView
                    android:id="@+id/title"
                    style="@style/FragmentHeader"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    tools:text="Building the Hacker Tracker" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/demo"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo" />

            <TextView
                android:id="@+id/exploit"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exploit" />

            <TextView
                android:id="@+id/tool"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tool" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/description"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="My event is so fresh!\nSofresh!" />

            <include layout="@layout/empty_text" />
        </FrameLayout>

        <TextView
            android:id="@+id/speakers_header"
            style="@style/SectionHeader"
            android:text="@string/speakers" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/speakers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" />


        <TextView
            android:id="@+id/related_events_header"
            style="@style/SectionHeader"
            android:text="@string/related_events" />

        <LinearLayout
            android:id="@+id/related_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">


        </LinearLayout>


        <include layout="@layout/row_footer" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>